# project_starter

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.cue  README.md  copier.yaml  justfile  project_tool.cue  pyproject.toml
cue.mod/: module.cue
extensions/cue_module_filter/: cue_module_filter.py
extensions/cue_module_filter/tests/: test_cue_module_filter.py
scripts/: copier_merge_driver.py
src/project_starter/: cli.py
template/: .pre-commit-config.yaml.cue
template/cue.mod/: module.cue.jinja
template/{{project_name}}/: .pre-commit-config.yaml.cue
tests/: test_generation.py
{{project_name}}/cue.mod/: module.cue.jinja
