[project]
name = "project-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "copier>=9.15.1",
    "copier-template-extensions>=0.3.3",
    "jinja2>=3.1.6",
    "typer>=0.26.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
project-starter = "project_starter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/my_scaffold"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
